--- a/Plugins/UranBot.Reaction.Plugins/UranBot.Reaction.Plugins.csproj
+++ b/Plugins/UranBot.Reaction.Plugins/UranBot.Reaction.Plugins.csproj
@@ -11,7 +11,16 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Database\Configurations\" />
+      <Folder Include="Events\" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="Discord.Net.WebSocket" Version="3.15.0" />
+        <PackageReference Include="MediatR" Version="12.2.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
 </Project>
