--- a/Plugins/UranBot.Twitch.Plugin/UranBot.Twitch.Plugin.csproj
+++ b/Plugins/UranBot.Twitch.Plugin/UranBot.Twitch.Plugin.csproj
@@ -17,20 +17,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Discord.Net" Version="3.15.0"/>
+        <PackageReference Include="Discord.Net.WebSocket" Version="3.15.0" />
         <PackageReference Include="MediatR" Version="12.2.0" />
-        <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.5"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
-        <PackageReference Include="Serilog" Version="3.1.1"/>
-        <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0"/>
-        <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0"/>
-        <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1"/>
         <PackageReference Include="TwitchLib.Api" Version="3.9.0" />
     </ItemGroup>
 </Project>
