Refactor reaction handling to support add/remove distinction.
Introduced separate handling for adding and removing reactions, including new database columns and event models. Updated related services, configurations, and handlers to manage both "AddRequest" and "RemoveRequest" logic.

--- a/UranBot/UranBot.csproj
+++ b/UranBot/UranBot.csproj
@@ -41,7 +41,9 @@
 
     <ItemGroup>
       <None Remove="appsettings.json" />
-      <AdditionalFiles Include="appsettings.json" />
+      <AdditionalFiles Include="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </AdditionalFiles>
       <None Remove="appsettings.example.json" />
       <AdditionalFiles Include="appsettings.example.json" />
     </ItemGroup>
