Add Reaction Role Plugin with role assignment support
This commit introduces the Reaction Role Plugin, which allows users to assign and remove roles via message reactions. It includes event handlers, service registration, and command functionality to manage reaction-based role assignments. The project's target framework has also been adjusted to .NET 8.0.

--- a/Plugins/UranBot.ReactionRole.Plugin/UranBot.ReactionRole.Plugin.csproj
+++ b/Plugins/UranBot.ReactionRole.Plugin/UranBot.ReactionRole.Plugin.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -15,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Commands\" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
     </ItemGroup>
 
 </Project>
