Simplify appsettings.json inclusion in project configuration
Removed unnecessary CopyToOutputDirectory property for appsettings.json in the project file. This change streamlines the configuration without impacting functionality.

--- a/UranBot/UranBot.csproj
+++ b/UranBot/UranBot.csproj
@@ -41,9 +41,7 @@
 
     <ItemGroup>
       <None Remove="appsettings.json" />
-      <AdditionalFiles Include="appsettings.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </AdditionalFiles>
+      <AdditionalFiles Include="appsettings.json" />
       <None Remove="appsettings.example.json" />
       <AdditionalFiles Include="appsettings.example.json" />
     </ItemGroup>
